# pylistdiff

./: .gitignore  .travis.yml  Pipfile  README.md  README.rst  pylintrc  pyproject.toml  setup.py
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml
listdiff/: __init__.py
src/listdiff/: __init__.py
tests/: __init__.py  test_all.py
